--- a/retailer.html
+++ b/retailer.html
@@ -81,16 +81,27 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
 <!-- CART -->
 <div class="modal" id="cartModal">
  <div class="modal-content">
-  <h3>🧺 My Cart</h3>
-  <div id="cartItems"></div>
-  <p id="cartTotal"></p>
-  <select id="cartVehicle">
-    <option value="">Select Vehicle</option>
-    <option value="two_wheeler">Two Wheeler</option>
-    <option value="three_wheeler">Three Wheeler</option>
-    <option value="four_wheeler">Four Wheeler</option>
-  </select>
-  <button class="primary" onclick="payCart()">Pay & Order</button>
+  <h3 style="text-align:center">🧺 My Cart</h3>
+
+  <div id="cartItems" style="margin-top:10px"></div>
+
+  <div style="margin-top:12px">
+    <select id="cartVehicle" onchange="updateCartTotal()">
+      <option value="">🚚 Select Vehicle</option>
+      <option value="two_wheeler">Two Wheeler</option>
+      <option value="three_wheeler">Three Wheeler</option>
+      <option value="four_wheeler">Four Wheeler</option>
+    </select>
+  </div>
+
+  <div style="background:#f8fafc;padding:12px;border-radius:10px;margin-top:12px">
+    <div id="cartSubtotal" class="small"></div>
+    <div id="cartDelivery" class="small"></div>
+    <hr>
+    <b id="cartGrandTotal"></b>
+  </div>
+
+  <button class="primary" style="margin-top:12px" onclick="payCart()">💳 Pay & Order</button>
   <button onclick="closeAll()">Close</button>
  </div>
 </div>
@@ -267,18 +278,49 @@ async function payCart(){
 }
 
 /* ORDERS */
-async function openOrders(){
- ordersModal.style.display="flex";
- const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
- const r=await fetch(`${API}/api/orders/retailer/${p.mobile}`);
- const d=await r.json();
- myOrders.innerHTML=d.orders.map(o=>`
- <div class="order-card">
-  <b>${o.productName||"Cart Order"}</b><br>
-  ₹${o.totalAmount} (Delivery ₹${o.deliveryCharge||0})<br>
-  <span class="small">🕒 ${formatDT(o.createdAt)}</span><br>
-  <span class="badge">${o.status}</span>
- </div>`).join("");
+function openCart(){
+ cart = JSON.parse(localStorage.getItem("cart")||"[]");
+
+ if(cart.length===0){
+  cartItems.innerHTML="<p style='text-align:center'>🛒 Cart is empty</p>";
+  cartSubtotal.innerText="";
+  cartDelivery.innerText="";
+  cartGrandTotal.innerText="";
+  cartModal.style.display="flex";
+  return;
+ }
+
+ let subtotal=0;
+ cartItems.innerHTML = cart.map((c,i)=>{
+  subtotal+=c.price;
+  return `
+  <div style="
+    display:flex;
+    gap:10px;
+    align-items:center;
+    background:#fff;
+    padding:10px;
+    border-radius:12px;
+    margin-bottom:8px;
+    box-shadow:0 3px 8px rgba(0,0,0,.08)">
+    
+    <img src="${c.image}" style="width:60px;height:60px;border-radius:8px;object-fit:cover">
+
+    <div style="flex:1">
+      <b>${c.productName}</b><br>
+      <span class="small">₹${c.price}</span>
+    </div>
+
+    <button onclick="removeCart(${i})"
+     style="border:none;background:#fee2e2;border-radius:50%;width:30px;height:30px">❌</button>
+  </div>`;
+ }).join("");
+
+ cartSubtotal.innerText = "Subtotal ₹"+subtotal;
+ cartDelivery.innerText = "Delivery ₹0";
+ cartGrandTotal.innerText = "Total ₹"+subtotal;
+
+ cartModal.style.display="flex";
 }
 
 /* DELIVERY */
