--- a/retailer.html
+++ b/retailer.html
@@ -240,6 +240,20 @@ function removeCart(i){
  openCart();
 }
 
+ function updateCartTotal(){
+ const vehicle = document.getElementById("cartVehicle").value;
+ let subtotal = cart.reduce((s,i)=>s+i.price,0);
+ let delivery = 0;
+
+ if(vehicle==="two_wheeler") delivery=1;
+ else if(vehicle==="three_wheeler") delivery=50;
+ else if(vehicle==="four_wheeler") delivery=80;
+
+ cartDelivery.innerText = "Delivery ₹"+delivery;
+ cartGrandTotal.innerText = "Total ₹"+(subtotal+delivery);
+} 
+
+  
 /* PAY CART */
 async function payCart(){
  const vehicle = cartVehicle.value;
