--- a/retailer.html
+++ b/retailer.html
@@ -33,6 +33,40 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
 .order-card{background:#fff;padding:12px;margin-bottom:10px;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.08)}
 .badge{background:#e0f2fe;padding:4px 10px;border-radius:20px;font-size:12px}
 .small{font-size:12px;color:#555}
+.delivery-card{
+  background:#f8fafc;
+  border-left:5px solid #16a34a;
+  padding:14px;
+  border-radius:12px;
+  margin-bottom:12px;
+  box-shadow:0 4px 10px rgba(0,0,0,.08);
+}
+
+.delivery-row{
+  display:flex;
+  justify-content:space-between;
+  font-size:14px;
+  margin:4px 0;
+}
+
+.delivery-label{
+  color:#555;
+}
+
+.delivery-value{
+  font-weight:600;
+  color:#111;
+}
+
+.delivery-code{
+  background:#dcfce7;
+  color:#166534;
+  padding:4px 10px;
+  border-radius:20px;
+  font-weight:600;
+  display:inline-block;
+  margin-top:6px;
+}
 </style>
 </head>
 
