--- a/retailer.html
+++ b/retailer.html
@@ -161,13 +161,15 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
  </div>
 </div>
 
-<!-- DELIVERY -->
+<!-- DELIVERY DETAILS -->
 <div class="modal" id="deliveryModal">
- <div class="modal-content">
-  <h3>Delivery Details</h3>
-  <div id="deliveryData"></div>
-  <button onclick="closeAll()">Close</button>
- </div>
+  <div class="modal-content">
+    <h3 style="text-align:center;margin-bottom:15px">🚚 Delivery Details</h3>
+
+    <div id="deliveryData"></div>
+
+    <button class="primary" onclick="closeAll()">Close</button>
+  </div>
 </div>
 
 <script>
