--- a/retailer.html
+++ b/retailer.html
@@ -152,13 +152,15 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
  </div>
 </div>
 
-<!-- ORDERS -->
-<div class="modal" id="ordersModal">
- <div class="modal-content">
-  <h3>My Orders</h3>
-  <div id="myOrders"></div>
-  <button onclick="closeAll()">Close</button>
- </div>
+<!-- ORDER STATUS -->
+<div class="modal" id="orderStatusModal">
+  <div class="modal-content">
+    <h3 style="text-align:center;margin-bottom:16px">📦 Order Status</h3>
+
+    <div id="orderStatusData"></div>
+
+    <button class="primary" onclick="closeAll()">Close</button>
+  </div>
 </div>
 
 <!-- DELIVERY DETAILS -->
