--- a/retailer.html
+++ b/retailer.html
@@ -67,6 +67,42 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
   display:inline-block;
   margin-top:6px;
 }
+
+.status-card{
+  background:#ffffff;
+  border-radius:14px;
+  padding:14px;
+  margin-bottom:14px;
+  box-shadow:0 6px 14px rgba(0,0,0,.08);
+  border-left:6px solid #2563eb;
+}
+
+.status-product{
+  font-size:16px;
+  font-weight:600;
+  color:#111;
+  margin-bottom:6px;
+}
+
+.status-badge{
+  display:inline-block;
+  padding:4px 12px;
+  border-radius:20px;
+  font-size:13px;
+  font-weight:600;
+  margin-bottom:8px;
+}
+
+.status-pending{ background:#fef3c7;color:#92400e; }
+.status-confirmed{ background:#dcfce7;color:#166534; }
+.status-delivery{ background:#e0f2fe;color:#075985; }
+.status-delivered{ background:#ede9fe;color:#5b21b6; }
+
+.status-time{
+  font-size:13px;
+  color:#555;
+}
+  
 </style>
 </head>
 
