--- a/wholesaler.html
+++ b/wholesaler.html
@@ -36,7 +36,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   <input id="shopName" placeholder="Shop Name">    
   <input id="shopMobile" placeholder="UPI / Mobile Number">    
   <textarea id="shopAddress" placeholder="Shop Address"></textarea>    
-  <button class="primary" onclick="saveProfile()">Save</button>    
+  <button class="primary" onclick="saveWholesalerProfileToServer()">Save</button>    
   <button onclick="closeAll()">Cancel</button>    
  </div>    
 </div>  <!-- PRODUCT -->  <div class="modal" id="productModal">    
