--- a/retailer.html
+++ b/retailer.html
@@ -581,6 +581,41 @@ async function openRetailerProfile(){
   }
 }
 
+async function saveProfile(){
+
+  if(!profileMobile.value.trim()){
+    alert("Mobile required");
+    return;
+  }
+
+  const payload = {
+    retailerId: localStorage.getItem("userId"),
+    name: profileName.value.trim(),
+    mobile: profileMobile.value.trim(),
+    address: profileAddress.value.trim()
+  };
+
+  try{
+    const res = await fetch(`${API}/api/retailers/saveProfile`,{
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    const data = await res.json();
+
+    if(data.success){
+      alert("✅ Profile server me save ho gaya");
+      closeAll();
+    }else{
+      alert("❌ Save failed");
+    }
+  }catch(err){
+    alert("Server error");
+  }
+}
+
+  
 /* NOTIFY */
 setInterval(async()=>{
  const p=JSON.parse(localStorage.getItem("retailerProfile")||"{}");
